--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>personal thingy</title>
+    <title>personal-website</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@515&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
