--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@
                         <p id="text04">
                             <span>
                                 <mark>“Any tone can succeed any other tone, any tone can sound simultaneously with any other tone or tones, and any group of tones can be followed by any other group of tones, just as any degree of tension or nuance can occur in any medium under any kind of stress or duration. Successful projection will depend upon the contextual and formal conditions that prevail, and upon the skill and soul of the composer”</mark>
-                                - Twentieth-Century Harmony by Vincent Persichetti.
+                                - Twentieth Century Harmony by Vincent Persichetti.
                             </span>
                             <br/>
                             <br/>
